--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 Code/CL/data/MNIST/raw/train-labels-idx1-ubyte.gz
-Code/CL/core/__pycache__/dataloaders.cpython-310.pyc
-Code/CL/core/__pycache__/dataloaders.cpython-311.pyc
-Code/CL/core/__pycache__/model.cpython-310.pyc
-Code/CL/core/__pycache__/model.cpython-311.pyc
-Code/CL/core/__pycache__/trainer.cpython-310.pyc
-Code/CL/core/__pycache__/trainer.cpython-311.pyc
+Code/CL/core/__pycache__/
 Code/CL/data/MNIST/raw/t10k-images-idx3-ubyte
 Code/CL/data/MNIST/raw/t10k-images-idx3-ubyte.gz
 Code/CL/data/MNIST/raw/t10k-labels-idx1-ubyte
@@ -13,3 +8,8 @@ Code/CL/data/MNIST/raw/train-images-idx3-ubyte
 Code/CL/data/MNIST/raw/train-images-idx3-ubyte.gz
 Code/CL/data/MNIST/raw/train-labels-idx1-ubyte
 Code/CL/NashMCL/
+Code/CL/.DS_Store
+Code/CL/data/MNIST/.DS_Store
+Code/CL/data/.DS_Store
+Code/CL/core/__pycache__/trainer.cpython-39.pyc
+Code/.DS_Store
