refactor and torch compile for speed

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 Code/CL/data/MNIST/raw/train-labels-idx1-ubyte.gz
 Code/CL/core/__pycache__/
-Code/CL/data/MNIST/raw/t10k-images-idx3-ubyte
-Code/CL/data/MNIST/raw/t10k-images-idx3-ubyte.gz
-Code/CL/data/MNIST/raw/t10k-labels-idx1-ubyte
-Code/CL/data/MNIST/raw/t10k-labels-idx1-ubyte.gz
-Code/CL/data/MNIST/raw/train-images-idx3-ubyte
-Code/CL/data/MNIST/raw/train-images-idx3-ubyte.gz
-Code/CL/data/MNIST/raw/train-labels-idx1-ubyte
+Code/CL/data/
 Code/CL/NashMCL/
 Code/CL/.DS_Store
 Code/CL/data/MNIST/.DS_Store
 Code/CL/data/.DS_Store
 Code/CL/core/__pycache__/trainer.cpython-39.pyc
 Code/.DS_Store
+Code/CL/Res/
+Code/CL/mnist_NASH.png
